<resources>
    <string name="app_name">MangaVerse</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_discover">Discover</string>
    <string name="title_my_books">My Books</string>
    <string name="title_settings">Settings</string>


    <!-- Onboarding Screen -->
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_title">Welcome to Your Personal Library</string>
    <string name="welcome_description">Carry all your favorite books with you, right in your pocket. Start building your collection today.</string>
    <string name="welcome_icon_desc">Onboarding icon</string>
    
    <!-- Auth Screen -->
    <string name="create_account_title">Create Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account? Log In</string>
    <string name="or_continue_with">or continue with</string>
    <string name="terms_privacy">By continuing, you agree to our Terms of Service and Privacy Policy.</string>
    <string name="add_photo">Add profile photo</string>
    <string name="google_login">Login with Google</string>
    <string name="apple_login">Login with Apple</string>
    
    <!-- Login Screen -->
    <string name="welcome_back">Welcome Back</string>
    <string name="login_subtitle">Login to continue reading</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    
    <!-- Discover Screen -->
    <string name="discover">Discover</string>
    <string name="search_hint">Search title, author...</string>
    <string name="all_books">All Books</string>
    <string name="genre">Genre</string>
    <string name="authors">Authors</string>
    <string name="new_label">New</string>
    <string name="top_rated">Top Rated</string>
    <string name="my_books">My Books</string>
    <string name="settings">Settings</string>
    
    <!-- Menu -->
    <string name="reset_onboarding">Reset Onboarding (Test)</string>
    
    <!-- Reader Screen -->
    <string name="back">Back</string>
    <string name="bookmark">Bookmark</string>
    <string name="table_of_contents">Table of Contents</string>
    <string name="search">Search</string>
    <string name="audio">Audio</string>
    <string name="font_size">Font Size</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="sepia">Sepia</string>
    <string name="dark">Dark</string>
    <string name="font_style">Font Style</string>
    <string name="serif">Serif</string>
    <string name="sans_serif">Sans-serif</string>
    
    <!-- Settings Screen -->
    <string name="appearance">APPEARANCE</string>
    <string name="reading">READING</string>
    <string name="general">GENERAL</string>
    <string name="reading_direction">Reading Direction</string>
    <string name="left_to_right">Left to Right</string>
    <string name="page_turn_animation">Page Turn Animation</string>
    <string name="slide">Slide</string>
    <string name="show_reading_progress">Show Reading Progress</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="notifications">Notifications</string>
    <string name="about_support">About &amp; Support</string>
</resources>